force-app/main/default/objects/WorkRamp_Assignment__c/WorkRamp_Assignment__c.object-meta.xml
<CustomObject>
    <label>WorkRamp Assignment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WorkRamp Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>