force-app/main/default/objects/WorkRamp_Assignment__c/fields/Assignee_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignee Deactivated</label>
    <type>Checkbox</type>
</CustomField>