force-app/main/default/objects/WorkRamp_Assignment__c/fields/LastAccessed__c.field-meta.xml
<CustomField>
    <fullName>LastAccessed__c</fullName>
    <label>Last Accessed</label>
    <type>DateTime</type>
</CustomField>