force-app/main/default/objects/WorkRamp_Assignment__c/fields/PercentComplete__c.field-meta.xml
<CustomField>
    <fullName>PercentComplete__c</fullName>
    <label>Percent Complete</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>