force-app/main/default/objects/WorkRamp_Assignment__c/fields/WorkRampApp_User__c.field-meta.xml
<CustomField>
    <fullName>WorkRampApp_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field that establishes a lookup relationship between a WorkRamp Assignment object and a Salesforce User object. This field is managed by WorkRamp.</description>
    <inlineHelpText>Salesforce User associated with this Assignment</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WorkRamp_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>