force-app/main/default/objects/WorkRamp_Assignment__c/fields/WorkRampAssigneeGroups__c.field-meta.xml
<CustomField>
    <fullName>WorkRampAssigneeGroups__c</fullName>
    <label>WorkRamp Assignee Groups</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>